Endpoint for fetching single bill data added
