# swagger.json
@@ -665,6 +665,77 @@
           }
         }
       }
+    },
+    "/groups/{groupId}/bills/{billId}": {
+      "get": {
+        "tags": [
+          "Bills"
+        ],
+        "summary": "Get single bill",
+        "description": "Get single bill",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": {
+                    "bill": {
+                      "debtors": [
+                        {
+                          "paid": false,
+                          "_id": "5cf436bcd9aec4139c179b25",
+                          "user": {
+                            "_id": "5cdb048df901520606166a59",
+                            "username": "test testowski",
+                            "email": "test@example.com",
+                            "bank_account_number": "2137",
+                            "createdAt": "2019-05-14T18:10:22.313Z",
+                            "updatedAt": "2019-05-14T18:10:22.313Z",
+                            "__v": 0
+                          },
+                          "value": 16.5,
+                          "__v": 0
+                        },
+                        {
+                          "paid": false,
+                          "_id": "5cf436bcd9aec4139c179b26",
+                          "user": {
+                            "_id": "5ccaff4d664c582c6b8d6e29",
+                            "username": "janusz",
+                            "email": "janusz@example.com",
+                            "bank_account_number": "2137",
+                            "createdAt": "2019-05-02T14:31:42.124Z",
+                            "updatedAt": "2019-05-02T14:31:42.124Z",
+                            "__v": 0
+                          },
+                          "value": 16.5,
+                          "__v": 0
+                        }
+                      ],
+                      "_id": "5cf436bcd9aec4139c179b24",
+                      "name": "Rachunki",
+                      "value": 33,
+                      "user": {
+                        "_id": "5cdb048df901520606166a59",
+                        "username": "test testowski",
+                        "email": "test@example.com",
+                        "bank_account_number": "2137",
+                        "createdAt": "2019-05-14T18:10:22.313Z",
+                        "updatedAt": "2019-05-14T18:10:22.313Z",
+                        "__v": 0
+                      },
+                      "createdAt": "2019-06-02T20:51:08.478Z",
+                      "updatedAt": "2019-06-02T20:51:08.478Z",
+                      "__v": 0
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
